--- a/packages/nc-gui/ee/assets/css/theme-overrides.scss
+++ b/packages/nc-gui/ee/assets/css/theme-overrides.scss
@@ -254,6 +254,11 @@ body {
     @apply text-nc-content-gray;
   }
 
+  // Modal
+  .ant-modal-content {
+    @apply border-1 border-solid border-nc-border-gray-medium;
+  }
+
   // Sidebar
   .nc-home-create-new-btn,
   .nc-sidebar-item-dark {
